# Note-AIOgram

./: README.md  main.py  pyproject.toml
src/: settings.py
src/adapters/telegram_bot/: __init__.py  bot.py  callbacks.py  middleware.py
src/adapters/telegram_bot/keyboards/: contacts.py  fabnum_call.py  github.py  inline_links.py  main_keyboard.py  random_call.py
src/adapters/telegram_bot/routers/: echo.py  start.py
src/adapters/telegram_bot/routers/r3_text/: _router.py
src/adapters/telegram_bot/routers/r4_keyboards/: _router.py
src/adapters/telegram_bot/routers/r5_callbacks/: _router.py
src/adapters/telegram_bot/routers/r6_callbacks_more/: _router.py
src/app/: settings.py
src/app/adapters/telegram_bot/: bot.py  middleware.py  mixins.py
src/app/adapters/telegram_bot/keyboards/: fabnum_call.py  github_.py  main_keyboard.py  random_call.py
src/app/adapters/telegram_bot/routers/: start.py
src/app/adapters/telegram_bot/routers/r1_reply/: _router.py
src/app/adapters/telegram_bot/routers/r2_extra_params/: _router.py
src/app/adapters/telegram_bot/routers/r3_text/: _router.py
src/app/adapters/telegram_bot/routers/r4_keyboards/: _router.py
src/app/adapters/telegram_bot/routers/r5_callbacks/: _router.py
src/app/adapters/telegram_bot/routers/r6_callbacks_more/: _router.py
src/app/core/some/: repository.py
src/app/di/: _container.py
src/app/di/modules/: some.py
src/lib/: di.py
